Changed github stars iframe to a fixed position with a large z-index
Also added meta tags for iOS devices

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -48,7 +48,12 @@ h3 {
     padding-bottom: 25px;
 }
 
+
 .gh-iframe {
+    position: fixed;
+    top: 0px;
+    right: 0px;
     margin-top: 15px;
     margin-left: 0;
+    z-index: 50000;
 }
